# analysing_pii_leakage

./: .gitignore  README.md  requirements.txt  setup.cfg
.github/workflows/: codeql.yml
configs/evaluate/: pii-extraction.yml  pii-inference.yml
configs/fine-tune/: echr-gpt2-small-dp8.yml  echr-gpt2-small-scrubbed.yml  echr-gpt2-small-undefended.yml
configs/pii-extraction/: echr-gpt2-small-undefended.yml
configs/pii-inference/: echr-gpt2-small-undefended.yml
configs/pii-reconstruction/: echr-gpt2-small-undefended.yml
examples/: evaluate.py  extract_pii.py  fine_tune.py  infer_pii.py  mia.py
old_examples/: cache_samples.py  cache_scores.py  evaluate_mia.py  evaluate_new_pii_ex.py  evaluate_pii_inf.py  evaluate_pii_re.py  evaluate_ppl.py  evaluate_reconstruction.py  memorization_vs_reconstruction.py  multi_gpu_generate_sequences.py  observed_leakage_r.py  population_vs_shadow_attack.py
src/arguments/: attack_args.py  config_args.py  dataset_args.py  env_args.py  model_args.py  ner_args.py  outdir_args.py  privacy_args.py  sampling_args.py  trainer_args.py
src/attacks/: attack_factory.py  privacy_attack.py
src/attacks/extraction/: naive_extraction.py
src/attacks/mia/: base_signal.py  (+5 more)
src/dataset/: dataset.py  dataset_factory.py  generated_dataset.py  real_dataset.py
src/models/: gpt2.py  language_model.py  model_factory.py
src/ner/: analyzer.py  flair_tagger.py  pii_results.py  tagger.py  tagger_factory.py
src/pii_leakage.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/utils/: callbacks.py  output.py  random.py  set_ops.py
(+15 files in other folders)
